user controller init finish
add file logger

add mail controller

add Roles validate

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,3 @@
-
-
 spring:
-  devtools:
-    restart:
-      enabled: true  # 热部署
-  datasource:
-    url: jdbc:mysql://localhost:3306/funny_db?useSSL=false&charactorEncoding=utf8&serverTimezone=UTC
-    username: root
-    password: enncymysql
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  mail:
-    host: smtp.163.com
-    password:  RJMVNHFAKLLPHFEP
-    username: enncyfunnyblog@163.com
-    protocol: smtp
-
-#    mail:
-#      host: smtp.163.com
-#      password: OAZITWSUJEAEDMFJ
-#      username: enncymail@163.com
-#      protocol: smtp
-
-server:
-  port: 8999  # 服务器启动端口
+  profiles:
+    active: dev
