--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
     restart:
       enabled: true  # 热部署
   datasource:
-    url: jdbc:mysql://localhost:3306/funny_db?useSSL=false&charactorEncoding=utf8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/funny_db?useSSL=false&charactorEncoding=utf8&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: enncymysql
     driver-class-name: com.mysql.cj.jdbc.Driver
